---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-05-13
  Fixes:
    - Fixed compatibility with Alien Biomes
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-05-12
  Features:
    - Added x-ray selection tool to use xray on an area
  Changes:
    - Removed unused value in prototypes
    - Fixed changelog formatting
    - Removed doubled "i" icons in settings
    - Refactored a big part of the codebase
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2024.12.08
  Compatibility:
    - Added support for Alien Biomes trees
  Changes:
    - Cleaned up of prototype sprites' data generation
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2024.10.28
  Fixes:
    - Misaligned x-rayed tree position have been fixed
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2024.10.24
  Fixes:
    - Updated for 2.0 (Thanks thepapanoob)
    - A typo on the word 'typo' has been fixed in the changelog.
  Note:
    - Some trees, especially those from the new planets, will not be xrayed properly.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2024.10.20
  Fixes:
    - A typo in the mod's initialization has been fixed.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2024.10.7
  Fixes:
    - Tree should not change surface with the player anymore.
---------------------------------------------------------------------------------------------------