@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
-Date: ????
-  Changes:
+Date: 2025-05-13
+  Fixes:
+    - Attempt to fic an error causing event desync when loading a multiplayer game
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 2025-05-13
